# serve

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/serve/: agent_init.py  cli.py  comments.py  dataurl.py  renderer.py  server.py  templates.py  watcher.py
